<resources>
    <string name="app_name">借书圈</string>

    <string name="title_activity_login">Login</string>
    <string name="title_activity_forget_pwd">forgetPwdActivity</string>
    <string name="title_activity_register">registerActivity</string>
    <string name="title_activity_more">More</string>
    <string name="title_activity_mine_books">My Books</string>
    <string name="title_activity_mine_rent">My Rent</string>
    <string name="title_activity_mine_borrow">My Borrow</string>
    <string name="title_activity_detail">Detail</string>

    <string name="btn_login">Login</string>
    <string name="btn_change_state">Change</string>
    <string name="btn_delete">Delete</string>

    <string name="action_login">Login</string>
    <string name="action_send_mail">Send Mail</string>

    <string name="msg_exit_hint">Click again will exit application.</string>
    <string name="msg_login_success">Login success.</string>
    <string name="msg_reset_success">Reset password request was sending successful.</string>
    <string name="msg_reset_failure">Reset password request was failure.</string>
    <string name="msg_register_success">Register success.</string>
    <string name="msg_error_get_isbn">get ISBN number error</string>
    <string name="msg_default_empty">It\'s empty now, let us got to add some book.</string>
    <string name="msg_error_password_should_same">the new password should same</string>
    <string name="msg_error_need_thoughtworks_mail">please input a thoughtworks mail</string>

    <string name="msg_error_account_name">Email is not validate.</string>
    <string name="msg_error_account_pwd">Password is not validate.</string>

    <!--Tab bar -->
    <string name="tab_discover">Discover</string>
    <string name="tab_borrow">Borrow</string>
    <string name="tab_people">People</string>
    <string name="tab_mine">Mine</string>

    <string name="common_name">ThoughtWorks Email</string>
    <string name="common_pwd">Password</string>
    <string name="common_confirm_pwd">Confirm Password</string>
    <string name="common_register">Register</string>
    <string name="common_forget_pwd">Forget Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_scanner">ScannerActivity</string>
    <string name="title_activity_add_book_to_library">Add Book</string>

    <!--Mine Fragment-->
    <string name="mine_list_my_books">My books</string>
    <string name="mine_list_my_borrow">My borrow</string>
    <string name="mine_list_my_rent">My rent</string>
    <string name="mine_list_my_more">More</string>

    <string name="add_to_library_success">add to library success</string>
    <string name="add_to_library_already_have">already have this book</string>
    <string name="common_http_error">catch problem, please try it again later</string>
    <string name="discover_add_book_message_header">I add a new book《</string>
    <string name="discover_add_book_message_footer">》</string>
    <string name="common_error">error</string>
    <string name="title_activity_send_twitter">SendTwitter</string>

    <string name="send_message">Send Message</string>
    <string name="show_not_length_than">show not legnth more or less than 140 words</string>
    <string name="send_success">send success</string>

    <string name="title_activity_popular">Popular</string>
	
    <string name="book_detail_author_fmt">Author: %s</string>
    <string name="book_detail_press_fmt">Press: %s</string>
    <string name="book_detail_state_fmt">State: %s</string>
    <string name="book_comments">Comments</string>
    <string name="book_comments_all">All Comments</string>

    <string name="state_available">Available</string>
    <string name="state_disable">Disable</string>
    <string name="submit_feedback">Feedback</string>
    <string name="modify_nickname">Modify NickName</string>
    <string name="modify_password">Modify Password</string>
    <string name="logout">Logout</string>
    <string name="choose_avatar">Select Avatar</string>
    <string name="choose_avatar_from_gallery">Select From Gallery</string>
    <string name="choose_avatar_from_camera">Take Photo</string>
    <string name="specail_thanks">Thanks</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="feedback_hint">Write Your Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="title_activity_modify_password">ModifyPasswordActivity</string>
    <string name="title_activity_modify_nickname">ModifyNicknameActivity</string>
    <string name="title_activity_splash">SplashActivity</string>

    <string name="action_settings">Settings</string>
    <string name="please_wait">请稍微</string>
    <string name="updating_info">正在更新信息</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_password">Repeat New Password</string>
    <string name="done">Done</string>

    <string name="new_nickname">New Nickname</string>
    <string name="modify_nickname_empty">nickname show not empty</string>
    <string name="modify_nickname_success">modify nickname success</string>
    <string name="modify_password_current_password_empty">current password should not empty</string>
    <string name="modify_password_newpassword_error">new password should not empty and should equal to repeat</string>
    <string name="modify_password_success">modify password success</string>
    <string name="update_info_fail">信息更新失败</string>
    <string name="update_info_success">信息更新成功</string>
    <string name="content_is_empty">还没有输入信息哦</string>
    <string name="book_detail_delete_success">Delete book success</string>
    <string name="book_detail_borrow">borrow</string>
    <string name="book_detail_borrowlist">show borrow list</string>

</resources>
