<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar" />

        <LinearLayout style="@style/SectionContainer">

            <TextView
                android:id="@+id/modify_nickname"
                style="@style/ListItemTitle"
                android:text="@string/modify_nickname" />

            <TextView
                android:id="@+id/modify_password"
                style="@style/ListItemTitle"
                android:text="@string/modify_password" />
        </LinearLayout>

        <LinearLayout
            style="@style/SectionContainer"
            android:layout_marginTop="@dimen/list_item_margin">

            <TextView
                android:id="@+id/feedback"
                style="@style/ListItemTitle"
                android:text="@string/submit_feedback" />

            <TextView
                android:id="@+id/special_thanks"
                style="@style/ListItemTitle"
                android:text="@string/specail_thanks" />
        </LinearLayout>

        <Button
            android:id="@+id/logout"
            style="@style/Button"
            android:layout_marginLeft="@dimen/list_item_margin"
            android:layout_marginRight="@dimen/list_item_margin"
            android:layout_marginTop="@dimen/list_item_margin"
            android:background="@drawable/logout_bg_selector"
            android:text="@string/logout"
            android:textColor="@color/color_white" />
    </LinearLayout>


</ScrollView>
