<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/account_name"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/common_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/account_pwd"
        style="@style/LoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_name"
        android:hint="@string/common_pwd"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.JFQ.NormalButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/account_pwd"
        android:text="@string/action_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/forget_btn"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/common_forget_pwd" />

        <Button
            android:id="@+id/register_btn"
            style="@style/FlatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/common_register" />
    </LinearLayout>

</RelativeLayout>