<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.thoughtworks.jieshuquan.mine.more.ModifyPasswordActivity">


    <EditText
        android:id="@+id/current_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin"
        android:hint="@string/current_password"
        android:textSize="@dimen/more_content_text_size"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin"
        android:hint="@string/new_password"
        android:textSize="@dimen/more_content_text_size"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/list_item_margin"
        android:hint="@string/repeat_password"
        android:textSize="@dimen/more_content_text_size"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/modify_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/list_item_margin"
        android:background="@drawable/button_primary_selector"
        style="@style/Button"/>

</LinearLayout>
