<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tab_bar_background"
    android:orientation="horizontal"
    android:paddingBottom="3dp"
    tools:context="com.thoughtworks.jieshuquan_android.view.TabBar">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/sel_tab_search"
        android:gravity="bottom|center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/tab_discover"
        android:textColor="@color/sel_tab_text" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/sel_tab_books"
        android:gravity="bottom|center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/tab_borrow"
        android:textColor="@color/sel_tab_text" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/sel_tab_people"
        android:gravity="bottom|center_horizontal"
        android:paddingTop="8dp"
        android:text="@string/tab_people"
        android:textColor="@color/sel_tab_text" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableTop="@drawable/sel_tab_more"
        android:gravity="bottom|center_horizontal"
        android:paddingTop="5dp"
        android:text="@string/tab_mine"
        android:textColor="@color/sel_tab_text" />
</merge>
