<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none"
    android:fitsSystemWindows="true"
    tools:showIn="@layout/fragment_mine">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/list_my_book"
            style="@style/MineListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_book_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mine_list_my_books"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/list_my_borrow"
            style="@style/MineListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/my_borrow_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mine_list_my_borrow"
                android:textAppearance="@android:style/TextAppearance.Medium" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/list_my_rent"
            style="@style/MineListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/my_rent_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mine_list_my_rent"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </RelativeLayout>

        <include layout="@layout/divider" />

        <RelativeLayout
            android:id="@+id/list_my_setting"
            style="@style/MineListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mine_list_setting_margin">

            <TextView
                android:id="@+id/my_setting_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mine_list_my_setting"
                android:textAppearance="@android:style/TextAppearance.Medium" />

        </RelativeLayout>

        <include layout="@layout/divider" />

    </LinearLayout>
</ScrollView>