<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.thoughtworks.jieshuquan_android.activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:actionBarSize"
        android:orientation="vertical">

        <include layout="@layout/book_detail_info" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/tab_change_state"
                android:layout_width="match_parent"
                android:layout_height="@dimen/book_detail_tab_height"
                android:layout_toLeftOf="@+id/tab_divider"
                android:layout_toStartOf="@+id/tab_divider"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_state"
                    android:drawablePadding="@dimen/book_detail_tab_space"
                    android:drawableStart="@drawable/ic_state"
                    android:text="@string/btn_change_state" />
            </FrameLayout>

            <View
                android:id="@+id/tab_divider"
                android:layout_width="1px"
                android:layout_height="@dimen/book_detail_tab_height"
                android:layout_centerHorizontal="true"
                android:background="@color/divide_color" />

            <FrameLayout
                android:id="@+id/tab_delte"
                android:layout_width="match_parent"
                android:layout_height="@dimen/book_detail_tab_height"
                android:layout_toEndOf="@id/tab_divider"
                android:layout_toRightOf="@id/tab_divider"
                android:background="?android:selectableItemBackground"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:drawableLeft="@drawable/ic_delete"
                    android:drawablePadding="@dimen/book_detail_tab_space"
                    android:drawableStart="@drawable/ic_delete"
                    android:text="@string/btn_delete" />
            </FrameLayout>
        </RelativeLayout>

        <View
            android:id="@+id/book_divider"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="@color/divide_color" />

        <TextView
            android:id="@+id/book_comments_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/book_comments" />

        <ListView
            android:id="@+id/book_comments_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <FrameLayout
            android:id="@+id/book_comments_all_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/book_comments_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:clickable="true"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/book_comments_all"
                android:textColor="@color/color_blue" />

            <ProgressBar
                android:id="@+id/book_comments_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="invisible" />
        </FrameLayout>

    </LinearLayout>

    <include layout="@layout/toolbar" />

</RelativeLayout>
